# Lambda-Calculi-Coq

./: .gitignore  Makefile  README.md  Stlc.v  Util.v  Vanilla.v  _CoqProject  dune-project  lambda.opam  vanilla.v
lib/: ListUtil.v  README.md  SimpleTypes.v  Stlc.v  StlcDep.v  StlcDepExamples.v  StlcHas.v  SystemF.v  Util.v  Vanilla.v  dune
lib/PTS/: Red.v  Sub.v  Syntax.v  SystemU.v  Typing.v  WeakHead.v
lib/SF/: Denote.v  Dep.v  Plain.v  README.md
lib/STLC/: Denote.v  Dep.v  DepExamples.v  Has.v  README.md  SimpleTypes.v  Stlc.v
lib/Util/: Basic.v  EqRect.v  Lists.v
