opam-version: "2.0"
version: "0.1.0"
synopsis: "Lambda Calculus formalizations."
maintainer: "rnp39@cornell.edu"
authors: ["Rudy Nicolo Peterson <rnp39@cornell.edu>"]
homepage: "https://github.com/rudynicolop/Lambda-Calculi-Coq"
dev-repo: "git+https://github.com/rudynicolop/Lambda-Calculi-Coq"
bug-reports: "https://github.com/rudynicolop/Lambda-Calculi-Coq/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
install: [
  ["dune" "install"]
]
depends: [
  "coq" {build}
  "coq-equations" {build}
]
